--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "tentacleapp/cloudder",
+  "name": "krydos/cloudder",
   "description": "Cloudinary API wrapper for Laravel.",
   "keywords": [
     "laravel",
